Création des différents fichiers nécessaires

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mon premier HTML</title>
+		<title>Mon portfolio</title>
 		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 	</head>
-
+	
 	<body>
-		<p>Bonjour</p>
+		
+		<nav class="o-nav">
+			<a href="#">MAËL ARAMION</a>
+			<ul>
+				<li>
+					<a href="#">A propos de moi</a>
+				</li>
+				<li>
+					<a href="#">Compétences</a>
+				</li>
+				<li>
+					<a href="#">Projets</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+		<header>
+			<div>
+				<img src="" alt="Moi" title="Maël Aramion"/>
+			</div>
+			<div>
+				<h1>Je suis Maël Aramion,</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vulputate, era</p>
+			</div>
+		</header>
+
+		<section>
+			<h2>A propos de moi</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vulputate, era</p>
+		</section>
+
+		<section>
+			<h2>Mes compétences</h2>
+			<div>
+				
+			</div>
+		</section>
+
 	</body>
 </html>
