--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
 				<div class="flex-col w-100">
 					<div class="flex-row">
 						<div>
-							<img src="src/images/html.png" title="HTML" alt="HTML">
+							<img class="skill-icon" src="src/images/html.png" title="HTML" alt="HTML">
 						</div>
 						<div class="skill-html"></div>
 					</div>
 					<div class="flex-row">
 						<div>
-							<img src="src/images/css.png" title="CSS" alt="CSS">
+							<img class="skill-icon" src="src/images/css.png" title="CSS" alt="CSS">
 						</div>
 						<div class="skill-css"></div>
 					</div>
 					<div class="flex-row">
 						<div>
-							<img src="src/images/php.png" title="PHP" alt="PHP">
+							<img class="skill-icon" src="src/images/php.png" title="PHP" alt="PHP">
 						</div>
 						<div class="skill-php"></div>
 					</div>
@@ -77,19 +77,19 @@
 				<div class="flex-col w-100">
 					<div class="flex-row">
 						<div>
-							<img src="src/images/java.png" title="JAVA" alt="JAVA">
+							<img class="skill-icon" src="src/images/java.png" title="JAVA" alt="JAVA">
 						</div>
 						<div class="skill-java"></div>
 					</div>
 					<div class="flex-row">
 						<div>
-							<img src="src/images/c#.png" title="C#" alt="C#">
+							<img class="skill-icon" src="src/images/c#.png" title="C#" alt="C#">
 						</div>
 						<div class="skill-c#"></div>
 					</div>
-					<div class="flex-row">
+					<div class="flex-row4">
 						<div>
-							<img src="src/images/bootstrap.svg" title="bootstrap" alt="bootstrap">
+							<img class="skill-icon" src="src/images/bootstrap.svg" title="bootstrap" alt="bootstrap">
 						</div>
 						<div class="skill-bootstrap"></div>
 					</div>
@@ -97,9 +97,68 @@
 			</div>
 		</section>
 
-		<section class="">
-			
+		<!-- SECTION DES PROJETS -->
+		<section class="flex-row">
+			<div class="flex-col">
+				<h2>Mes projets</h2>
+				<div class="btn-container">
+					<button class="bg-black">
+						<img src="src/images/caret-left-fill.svg" alt="" title=""/>
+					</button>
+					<button class="bg-black">
+						<img src="src/images/caret-right-fill.svg" alt="" title=""/>
+					</button>
+				</div>
+			</div>
+			<div class="flex-row">
+				<div class="flex-col w-100">
+					<img src="src/images/placeholder_projet.png" alt="placeholder_projet" title="placeholder">
+				</div>
+				<div class="flex-col w-100">
+					<img src="src/images/placeholder_projet.png" alt="placeholder_projet" title="placeholder">
+				</div>
+				<div class="flex-col w-100">
+					<img src="src/images/placeholder_projet.png" alt="placeholder_projet" title="placeholder">
+				</div>
+			</div>
 		</section>
 
+		<!-- SECTION CONTACTER -->
+		<section class="flex-col">
+			<form action="#" method="post" class="form-contact">
+				<div class="flex-col">
+					<h2>Me contacter</h2>
+					<div class="flex-row">
+						<div class="flex-col">
+							<input type="text" name="prenom" placeholder="Prénom">
+							<input type="text" name="nom" placeholder="Email">
+						</div>
+						<div class="flex-col">
+							<input type="text" name="nom" placeholder="Nom">
+							<input type="text" name="tel" placeholder="Téléphone">
+						</div>
+					</div>
+					<div>
+						<input type="text" name="message" placeholder="Votre message...">
+					</div>
+				</div>
+			</form>
+		</section>
+
+
+		<!-- SECTION footer -->
+		<footer>
+			<ul>
+				<li>
+					<a href="">mael.aramion@gmail.com</a>
+				</li>
+				<li>
+					<p>00.00.00</p>
+				</li>
+				<li>
+					<p>Rue Ipsum</p>
+				</li>
+			</ul>
+		</footer>
 	</body>
 </html>
