--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 		<!-- SECTION A PROPOS DE MOI-->
 		<section class="flex-row">
 			<h2>A propos de moi</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vulputate, era</p>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vulputate, erat eget luctus laoreet, nunc dui iaculis nunc, id consequat nibh nisi quis diam. Nam gravida lacus sed ultricies auctor. Nunc non massa interdum, aliquet eros nec, aliquet sapien. Aenean semper
+			</p>
 		</section>
 
 
@@ -140,6 +142,9 @@
 					</div>
 					<div>
 						<input type="text" name="message" placeholder="Votre message...">
+					</div>
+					<div>
+						<input class="bg-black" type="submit" name="submit" value="Envoyer">
 					</div>
 				</div>
 			</form>
